...
                android:id="@+id/score_meld_spinner_layout_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/game_first_team">

                <ImageButton
                    android:id="@+id/score_meld_spinner_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="#FAFAFA"
                    android:contentDescription="@string/icon_description_meld_spinner"
                    android:src="@drawable/ic_chat_bubble_outline_black"
...
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score_display_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/game_default_score"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/score_text_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/team_members_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/score_display_1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/team_goal_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/score_display_1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/black"
...
                android:id="@+id/score_update_layout_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/game_first_team">

                <ImageButton
                    android:id="@+id/score_update_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="#FAFAFA"
                    android:contentDescription="@string/icon_description_score_update"
                    android:src="@drawable/ic_add_black"
...
            android:id="@+id/game_vertical_delimiter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/score_update_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="#FAFAFA"
                android:contentDescription="@string/icon_description_score_cancel"
                android:src="@drawable/ic_undo_black"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/game_playing_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"/>

            <ImageButton
                android:id="@+id/split_team_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="#FAFAFA"
                android:contentDescription="@string/icon_description_split_goal"
...
                android:id="@+id/score_meld_spinner_layout_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/game_second_team">

                <ImageButton
                    android:id="@+id/score_meld_spinner_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="#FAFAFA"
                    android:contentDescription="@string/icon_description_meld_spinner"
                    android:src="@drawable/ic_chat_bubble_outline_black"
...
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/score_display_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="3dp"
                    android:text="@string/game_default_score"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/score_text_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/team_goal_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/score_display_2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/black"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/team_members_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/score_display_2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="3dp"
                    android:visibility="invisible"/>
...
                android:id="@+id/score_update_layout_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/game_second_team">

                <ImageButton
                    android:id="@+id/score_update_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="#FAFAFA"
                    android:contentDescription="@string/icon_description_score_update"
                    android:src="@drawable/ic_add_black"
...
