...
    <string name="create_empty_list">Are you in Info? It seems you have no friends.</string>

    <string name="game_team_name_1">Team 1</string>
    <string name="game_team_name_2">Team 2</string>
    <string name="game_text_score_picker">Enter your score for this round</string>
    <string name="game_text_goal_picker">Enter the new score goal</string>
    <string name="game_text_point_goal">Playing to %s points</string>
    <string name="game_score_table_round">Round</string>
    <string name="game_score_table_points">Points</string>
    <string name="game_score_table_melds">Melds</string>
    <string name="game_default_score">-</string>

    <string name="numpad_text_0">0</string>
...
    <string name="dialog_add_player">Invite Player</string>
    <string name="dialog_add_confirmation">Add</string>
    <string name="dialog_remove_player">Remove this player?</string>
    <string name="dialog_select_team">Choose the team for player </string>
    <string name="dialog_team_selection_confirmation">Select</string>
    <string name="dialog_match">Match!</string>
    <string name="dialog_game_end">%s won the match. Congratulations!</string>
    <string name="dialog_leave">Leave</string>

    <string name="date_format_match_display">dd/MM/yyyy HH:mm:ss</string>
    <string name="date_format_match_creation">dd/MM HH:mm</string>

    <string name="request_location_rationale">Jass@EPFL needs to access your location to find matches near you.</string>
...

    <string name="toast_invalid_hour">Invalid hour: you cannot go back in time!</string>
    <string name="toast_invalid_date">Invalid date: you cannot go back in time!</string>
    <string name="toast_no_connection">No connection to Firebase.</string>
    <string name="toast_cannot_create_with_no_player">You cannot create a match with no player in it.</string>
    <string name="toast_invite_yourself">You cannot invite yourself</string>
    <string name="toast_cannot_cancel">There is nothing to cancel</string>
    <string name="toast_team_assignment_incorrect">Team assignment incorrect</string>
    <string name="toast_could_not_connect_to_tequila">Could not reach Tequila server. Please try again.</string>
    <string name="toast_could_not_perform_login">Could not perform login. Please try again</string>
    <string name="toast_invalid_score">Invalid score: the max number of points in a round is %d</string>

    <string name="toast_please_enter_description">You must enter a description to create a match.</string>

    <string name="error">Error!</string>
    <string name="error_cannot_join">Can not join match</string>
    <string name="error_match_full">Match is full.</string>
...
